--- a/frontend/src/components/task/index.css
+++ b/frontend/src/components/task/index.css
@@ -3,8 +3,8 @@
     /* border-left:0.1em solid rgb(30,102,204); */
 }
 
-.box:hover{
-    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+.box:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, .2);
 }
 
 .exampleBorder {
@@ -36,40 +36,38 @@
     margin-right: 1em;
 }
 
-.badge{
+.badge {
     padding-top: 0.2em;
     padding-bottom: 0.2em;
     /* width: 4em */
     padding-right: 0.5em;
-    
+
 }
 
-.download{
+.download {
     margin-bottom: 0.1em;
 }
 
-.text{
+.text {
     margin-bottom: -0.3em;
     margin-right: 0.5em;
 }
 
-.cardActions{
+.cardActions {
     margin-bottom: 0.3em;
 }
 
-.card{
+.card {
     height: 23em;
     width: 18.5em;
 }
 
-.vtask{
-text-align: center;
-background-color : #B8AD8B;
-margin-left: 12em;
-color : white;
-padding-top: .1em;
-border-top-right-radius: 0.3em;
+.vtask {
+    text-align: right;
+    margin-right: .3em;
+    margin-top: 0.3em;
 }
-a{
+
+a {
     text-decoration: none;
 }
